# theia

./: README.md  Readme.md  Taskfile.yml  pyproject.toml
benchmarks/: captions_benchmark.json
data/: captions.json  test.json  test_captions.json
docs/: object-detection-using-paligemma-mix-model.ipynb
src/: benchmark.py  caption.py  comparison.py  dataset.py  demo.py  dino.py  guessing.py  interface.py  model.py  phitest.py  pipeline.py  tuning.py  utils.py
src/theia/: main.py
utility_scripts/: crop_and_mask_images_using_mask.py  order_images_by_camera.sh
